# testaudiowaveform

./: CMakeLists.txt  KisSyncedAudioPlayback.cpp  KisSyncedAudioPlayback.h  KisWaveformGenerator.cpp  KisWaveformGenerator.h  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
